--- a/EuCAP2019_template.tex
+++ b/EuCAP2019_template.tex
@@ -1,4 +1,3 @@
-﻿
 %% bare_conf.tex
 %% V1.3
 %% 2007/01/11
@@ -414,7 +413,7 @@ In this paper, we present a corrosion monitoring scheme for biodegradable cardio
 % no keywords
 %{\smallskip \keywords antenna, propagation, measurement.}
 % Keywords
-\textbf{\small{\emph{biodegradable cardiovascular stents, non-destructive evaluation, millimeter waves}}
+\textbf{\small{\emph{biodegradable cardiovascular stents, non-destructive evaluation, millimeter waves}}}
 
 
 % For peer review papers, you can put extra information on the cover
