--- a/References.bib
+++ b/References.bib
@@ -76,7 +76,7 @@
 	month = feb,
 	year = {2006},
 	pmid = {16446520},
-	keywords = {Absorbable Implants, Equipment Design, Humans, Stents},
+	keywords = {Humans, Absorbable Implants, Equipment Design, Stents},
 	pages = {70--74}
 }
 
@@ -94,7 +94,7 @@
 	month = mar,
 	year = {2006},
 	pmid = {16246414},
-	keywords = {Alloys, Biomechanical Phenomena, Bone Substitutes, Corrosion, Magnesium, Orthopedics, Prostheses and Implants},
+	keywords = {Alloys, Corrosion, Magnesium, Orthopedics, Biomechanical Phenomena, Bone Substitutes, Prostheses and Implants},
 	pages = {1728--1734}
 }
 
@@ -145,4 +145,26 @@
 	pmcid = {PMC5408160},
 	keywords = {AHA Scientific Statements, cardiovascular diseases, epidemiology, risk factors, statistics, stroke},
 	pages = {e146--e603}
+}
+
+@article{haude_safety_2016,
+	title = {Safety and performance of the second-generation drug-eluting absorbable metal scaffold in patients with de-novo coronary artery lesions ({BIOSOLVE}-{II}): 6 month results of a prospective, multicentre, non-randomised, first-in-man trial},
+	volume = {387},
+	issn = {1474-547X},
+	shorttitle = {Safety and performance of the second-generation drug-eluting absorbable metal scaffold in patients with de-novo coronary artery lesions ({BIOSOLVE}-{II})},
+	doi = {10.1016/S0140-6736(15)00447-X},
+	abstract = {BACKGROUND: Absorbable scaffolds were designed to overcome the limitations of conventional, non-absorbable metal-based drug-eluting stents. So far, only polymeric absorbable scaffolds are commercially available. We aimed to assess the safety and performance of a novel second-generation drug-eluting absorbable metal scaffold (DREAMS 2G) in patients with de-novo coronary artery lesions.
+METHODS: We did this prospective, multicentre, non-randomised, first-in-man trial at 13 percutaneous coronary intervention centres in Belgium, Brazil, Denmark, Germany, Singapore, Spain, Switzerland, and the Netherlands. Eligible patients had stable or unstable angina or documented silent ischaemia, and a maximum of two de-novo lesions with a reference vessel diameter between 2·2 mm and 3·7 mm. Clinical follow-up was scheduled at months 1, 6, 12, 24, and 36. Patients were scheduled for angiographic follow-up at 6 months, and a subgroup of patients was scheduled for intravascular ultrasound, optical coherence tomography, and vasomotion assessment. All patients were recommended to take dual antiplatelet treatment for at least 6 months. The primary endpoint was in-segment late lumen loss at 6 months. We did analysis by intention to treat. This trial is registered with ClinicalTrials.gov, number NCT01960504.
+FINDINGS: Between Oct 8, 2013, and May 22, 2015, we enrolled 123 patients with 123 coronary target lesions. At 6 months, mean in-segment late lumen loss was 0·27 mm (SD 0·37), and angiographically discernable vasomotion was documented in 20 (80\%) of 25 patients. Intravascular ultrasound assessments showed a preservation of the scaffold area (mean 6·24 mm(2) [SD 1·15] post-procedure vs 6·21 mm(2) [1·22] at 6 months) with a low mean neointimal area (0·08 mm(2) [0·09]), and optical coherence tomography did not detect any intraluminal mass. Target lesion failure occurred in four (3\%) patients: one ({\textless}1\%) patient died from cardiac death, one ({\textless}1\%) patient had periprocedural myocardial infarction, and two (2\%) patients needed clinically driven target lesion revascularisation. No definite or probable scaffold thrombosis was observed.
+INTERPRETATION: Our findings show that implantation of the DREAMS 2G device in de-novo coronary lesions is feasible, with favourable safety and performance outcomes at 6 months. This novel absorbable metal scaffold could be an alternative to absorbable polymeric scaffolds for treatment of obstructive coronary disease.
+FUNDING: Biotronik AG.},
+	language = {eng},
+	number = {10013},
+	journal = {Lancet (London, England)},
+	author = {Haude, Michael and Ince, Hüseyin and Abizaid, Alexandre and Toelg, Ralph and Lemos, Pedro Alves and von Birgelen, Clemens and Christiansen, Evald Høj and Wijns, William and Neumann, Franz-Josef and Kaiser, Christoph and Eeckhout, Eric and Lim, Soo Teik and Escaned, Javier and Garcia-Garcia, Hector M. and Waksman, Ron},
+	month = jan,
+	year = {2016},
+	pmid = {26470647},
+	keywords = {Humans, Male, Middle Aged, Aged, Female, Absorbable Implants, Alloys, Magnesium, Antibiotics, Antineoplastic, Cohort Studies, Coronary Restenosis, Coronary Stenosis, Drug-Eluting Stents, Endosonography, Percutaneous Coronary Intervention, Prospective Studies, Sirolimus, Tissue Scaffolds, Tomography, Optical Coherence, Treatment Outcome},
+	pages = {31--39}
 }
