--- a/EuCAP2019_template.tex
+++ b/EuCAP2019_template.tex
@@ -97,6 +97,8 @@
 % When switching from latex to pdflatex and vice-versa, the compiler may
 % have to be run twice to clear warning/error messages.
 \usepackage{xcolor}
+\usepackage{siunitx}
+\sisetup{range-phrase=--}
 
 
 
@@ -430,21 +432,16 @@ In this paper, we present a corrosion monitoring scheme for biodegradable cardio
 \vspace{7pt}
 \section{Introduction}
 % no \IEEEPARstart
-Cardiovascular disease (CVD) is the leading cause of death worldwide, and it accounted for an estimated 30\% of all deaths in the year 2013 globally \cite{benjamin_heart_2017}. Clogging of the heart vessels is the biggest factor responsible for the development of the CVD. These days, it is a common clinical practice to reopen the heart vessels through balloon angioplasty, and place a mesh-type metallic scaffolding tube called a stent to reinforce the vessel walls.  However, due to the long-standing presence of a metallic foreign object in the form of a stent, serious health complications arise chief among which is the reclogging of the vessels in the long term, especially in the vicinity of the stent. From a medical perspective, an ideal stent would be the one that serves its purpose of reopening and stabilizing the heart vessels and then disappear \cite{waksman_biodegradable_2006}.  The biodegradable stents composed of metal alloys that mainly constitute magnesium and zinc, precisely offer such a possibility where the scaffold structure completely corrode away after performing the reinforcement of the heart vessel walls \cite{hou_review_2016}.
+Cardiovascular disease (CVD) is the leading cause of death worldwide, and it accounted for an estimated 30\% of all deaths in the year 2013 globally \cite{benjamin_heart_2017}. Clogging of the heart vessels is the biggest factor responsible for the development of the CVD. These days, it is a common clinical practice to reopen the heart vessels through balloon angioplasty, and place a mesh-type metallic scaffolding tube called a stent to reinforce the vessel walls.  However, due to the long-standing presence of a metallic foreign object in the form of a stent, serious health complications arise chief among which is the reclogging of the vessels in the long term, especially in the vicinity of the stent. From a medical perspective, an ideal stent would be the one that serves its purpose of reopening and stabilizing the heart vessels and then disappear \cite{waksman_biodegradable_2006}.  The biodegradable stents  precisely offer such a possibility where the scaffold structure completely corrode away after performing the reinforcement of the heart vessel walls \cite{hou_review_2016}.
 
-Over the last two decades, considerable efforts have been made to develop the so-called “biodegradable” stents to mitigate the long-term side effects associated with corrosion-resistant stents [4]. The fundamental hypothesis is that “a biodegradable coronary stent will provide adequate vascular scaffolding for approximately six months till the vessel heals and later corrode and be absorbed in a timely manner, thereby eliminating sources
-of side-effects” [4]. Research into biodegradable polymers and metals has been on-going, but the inherent superior mechanical properties of metals make them more attractive for biodegradable stent application compared to polymers [5]. Some other documented drawbacks in biodegradable polymer stents include incomplete expansion  with balloon angioplasty and restenosis data similar to the first generation, corrosion-resistant metal stents [5, 6].
-Among metals, zinc and magnesium-based alloys have both shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans [7-9]. Mg is an essential element to the human body and given the weight of a typical coronary stent is in the range of 3 - 5 mg, the release of Mg ions is unlikely to cause adverse effects [10].
+Research into biodegradable polymers and metals has been on-going, but the inherent superior mechanical properties of metals make them more attractive for biodegradable stent application compared to polymers \cite{chen_recent_2014}. Among metals, zinc and magnesium-based alloys have both shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. More importantly, Mg is also vital in maintaining a healthy heart, and given the weight of a typical coronary stent is in the range of \SIrange{3}{5}{\milligram}, the release of Mg ions is unlikely to cause any adverse effects.
 
-Polymers and metals are the two basic materials used for manufacturing biodegradable stents production. Medical grade stainless steel and nitinol were initially used to manufacture permanent stents due to their high mechanical strength and corrosion resistance properties. However, its perennial nature is held responsible for unwanted foreign body reaction often resulting in physical irritation due to inflammations and lumen narrowing or restenosis. On the other hand, polymer based stents that currently dominate the cardiovascular implants industry, are relatively lightweight yet they are associated with long-term safety risks such as the development of late stent thrombosis. Polymer stents need more volume to acquire a mechanical performance similar to that of a metallic stent, and therefore, they require a longer time until complete degradation. Lack of radio-opacity is another limitation in the clinical application of polymer stents since it is more complicated to deploy a stent without fluoroscopic visualization [4].
-Biodegradable metals (classified as pure metals, biodegradable alloys, and biodegradable metal matrix composites) are preferred for their biocompatibility and their strength and ductility relative to polymers [5]. Recently, there has been an increased interest in the development of biodegradable cardiovascular stents composed of magnesium alloys, pure iron, Fe-based alloys, and Zn-based alloys, and most importantly they can ‘do their job and disappear’ [6] after serving the purpose of arterial healing. These materials are typically produced as crystalline materials or metallic glasses. Stents made from crystalline alloys have already been produced. They indicate a relatively faster degradation of mechanical properties before/during the tissue remodeling process [7].  Metallic glasses have usually large elastic limits and resilience, which can be utulized in self-expanding stents. However, there is no evidence that a metallic glass-based stent has already been produced. Magnesium has historically been used as a biomaterial to engineer medical implants due to its corrosion properties that result in the formation of magnesium hydroxide which can be naturally absorbed or excreted by the human body [8].
-For stenting applications, the biodegradability of stents presents advantages such as eliminating laborious and painful secondary surgery for removal after healing and using right material, the degrading stent can be used as a supplement for the body. The large depositions of magnesium are not likely to cause adverse effects since Mg is an essential element not toxic to the human body, and it is easily tolerable in large quantities [9]. The normal range of magnesium in plasma is 0.70 - 1.05 mmol/L, with the toxicity threshold between 2.5 and 3.5 mmol/L. Considering the weight of a coronary stent is in the range of 3 - 6 mg, the Mg-level is not likely to exceed the recommended daily intake of magnesium 0.7g [7]. Mg as an essential trace element for various human body metabolic activities, is prescribed as medication for a medical condition such as cardiac arrhythmia [10] and can entirely degrade in a physiological environment.
-
-
-
+One of the biggest engineering challenges presented with the use of a biodegradable stent is that its structural integrity must be maintained until the stent completely breaks down and is metabolized in to the bloodstream. To ensure this, the stent and its biodegradation due to corrosion needs to be monitored through non-invasive means. In this paper, we propose an electromagnetic monitoring scheme that monitors the structural integrity of a biodegradable stent using millimeter waves (mm-waves). Compared to the microwave wave imaging, mm-wave provide higher spatial resolution. On the other hand, mm-waves can penetrate deeper into the human tissue compared with the optical frequency counterparts. Using full-wave 3D electromagnetic simulations, we show that the stent corrosion can be determined with the help of the frequency change in the scattering properties.
 
 \vspace{7pt}
-\section{General Guidelines}
+\section{Methodology}
+%
+
 Define abbreviations and acronyms the first time they are used in the text, even after they have been defined in the abstract. Abbreviations such as IEEE, SI, MKS, CGS, sc, dc, and rms do not have to be defined. Do not use abbreviations in the title or heads unless they are unavoidable.
 
 Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as “3.5-inch disk drive.”
