--- a/References.bib
+++ b/References.bib
@@ -4,7 +4,6 @@
 	volume = {2015},
 	issn = {2356-6868, 2314-7784},
 	shorttitle = {Prevalence of {Cardiovascular} {Disease} and {Associated} {Risk} {Factors} among {Adult} {Population} in the {Gulf} {Region}},
-	url = {http://www.hindawi.com/journals/aph/2015/235101/},
 	doi = {10.1155/2015/235101},
 	language = {en},
 	urldate = {2018-10-10},
@@ -18,13 +17,12 @@
 	title = {A {Randomized} {Comparison} of {Coronary}-{Stent} {Placement} and {Balloon} {Angioplasty} in the {Treatment} of {Coronary} {Artery} {Disease}},
 	volume = {331},
 	issn = {0028-4793, 1533-4406},
-	url = {http://www.nejm.org/doi/abs/10.1056/NEJM199408253310802},
 	doi = {10.1056/NEJM199408253310802},
 	language = {en},
 	number = {8},
 	urldate = {2018-10-10},
 	journal = {New England Journal of Medicine},
-	author = {Fischman, David L. and Leon, Martin B. and Baim, Donald S. and Schatz, Richard A. and Savage, Michael P. and Penn, Ian and Detre, Katherine and Veltri, Lisa and Ricci, Donald and Nobuyoshi, Masakiyo and Cleman, Michael and Heuser, Richard and Almond, David and Teirstein, Paul S. and Fish, R. David and Colombo, Antonio and Brinker, Jeffrey and Moses, Jeffrey and Shaknovich, Alex and Hirshfeld, John and Bailey, Stephen and Ellis, Stephen and Rake, Randal and Goldberg, Sheldon},
+	author = {Fischman, David L.  et al.},
 	month = aug,
 	year = {1994},
 	pages = {496--501}
@@ -34,7 +32,6 @@
 	title = {A review on biodegradable materials for cardiovascular stent application},
 	volume = {10},
 	issn = {2095-025X, 2095-0268},
-	url = {http://link.springer.com/10.1007/s11706-016-0344-x},
 	doi = {10.1007/s11706-016-0344-x},
 	language = {en},
 	number = {3},
@@ -102,7 +99,6 @@
 	title = {Fundamentals and advances in magnesium alloy corrosion},
 	volume = {89},
 	issn = {00796425},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0079642517300506},
 	doi = {10.1016/j.pmatsci.2017.04.011},
 	language = {en},
 	urldate = {2018-10-10},
@@ -117,13 +113,12 @@
 	title = {Global, {Regional}, and {National} {Burden} of {Cardiovascular} {Diseases} for 10 {Causes}, 1990 to 2015},
 	volume = {70},
 	issn = {07351097},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0735109717372443},
 	doi = {10.1016/j.jacc.2017.04.052},
 	language = {en},
 	number = {1},
 	urldate = {2018-10-10},
 	journal = {Journal of the American College of Cardiology},
-	author = {Roth, Gregory A. and Johnson, Catherine and Abajobir, Amanuel and Abd-Allah, Foad and Abera, Semaw Ferede and Abyu, Gebre and Ahmed, Muktar and Aksut, Baran and Alam, Tahiya and Alam, Khurshid and Alla, François and Alvis-Guzman, Nelson and Amrock, Stephen and Ansari, Hossein and Ärnlöv, Johan and Asayesh, Hamid and Atey, Tesfay Mehari and Avila-Burgos, Leticia and Awasthi, Ashish and Banerjee, Amitava and Barac, Aleksandra and Bärnighausen, Till and Barregard, Lars and Bedi, Neeraj and Belay Ketema, Ezra and Bennett, Derrick and Berhe, Gebremedhin and Bhutta, Zulfiqar and Bitew, Shimelash and Carapetis, Jonathan and Carrero, Juan Jesus and Malta, Deborah Carvalho and Castañeda-Orjuela, Carlos Andres and Castillo-Rivas, Jacqueline and Catalá-López, Ferrán and Choi, Jee-Young and Christensen, Hanne and Cirillo, Massimo and Cooper, Leslie and Criqui, Michael and Cundiff, David and Damasceno, Albertino and Dandona, Lalit and Dandona, Rakhi and Davletov, Kairat and Dharmaratne, Samath and Dorairaj, Prabhakaran and Dubey, Manisha and Ehrenkranz, Rebecca and El Sayed Zaki, Maysaa and Faraon, Emerito Jose A. and Esteghamati, Alireza and Farid, Talha and Farvid, Maryam and Feigin, Valery and Ding, Eric L. and Fowkes, Gerry and Gebrehiwot, Tsegaye and Gillum, Richard and Gold, Audra and Gona, Philimon and Gupta, Rajeev and Habtewold, Tesfa Dejenie and Hafezi-Nejad, Nima and Hailu, Tesfaye and Hailu, Gessessew Bugssa and Hankey, Graeme and Hassen, Hamid Yimam and Abate, Kalkidan Hassen and Havmoeller, Rasmus and Hay, Simon I. and Horino, Masako and Hotez, Peter J. and Jacobsen, Kathryn and James, Spencer and Javanbakht, Mehdi and Jeemon, Panniyammakal and John, Denny and Jonas, Jost and Kalkonde, Yogeshwar and Karimkhani, Chante and Kasaeian, Amir and Khader, Yousef and Khan, Abdur and Khang, Young-Ho and Khera, Sahil and Khoja, Abdullah T. and Khubchandani, Jagdish and Kim, Daniel and Kolte, Dhaval and Kosen, Soewarta and Krohn, Kristopher J. and Kumar, G. Anil and Kwan, Gene F. and Lal, Dharmesh Kumar and Larsson, Anders and Linn, Shai and Lopez, Alan and Lotufo, Paulo A. and El Razek, Hassan Magdy Abd and Malekzadeh, Reza and Mazidi, Mohsen and Meier, Toni and Meles, Kidanu Gebremariam and Mensah, George and Meretoja, Atte and Mezgebe, Haftay and Miller, Ted and Mirrakhimov, Erkin and Mohammed, Shafiu and Moran, Andrew E. and Musa, Kamarul Imran and Narula, Jagat and Neal, Bruce and Ngalesoni, Frida and Nguyen, Grant and Obermeyer, Carla Makhlouf and Owolabi, Mayowa and Patton, George and Pedro, João and Qato, Dima and Qorbani, Mostafa and Rahimi, Kazem and Rai, Rajesh Kumar and Rawaf, Salman and Ribeiro, Antônio and Safiri, Saeid and Salomon, Joshua A. and Santos, Itamar and Santric Milicevic, Milena and Sartorius, Benn and Schutte, Aletta and Sepanlou, Sadaf and Shaikh, Masood Ali and Shin, Min-Jeong and Shishehbor, Mehdi and Shore, Hirbo and Silva, Diego Augusto Santos and Sobngwi, Eugene and Stranges, Saverio and Swaminathan, Soumya and Tabarés-Seisdedos, Rafael and Tadele Atnafu, Niguse and Tesfay, Fisaha and Thakur, J.S. and Thrift, Amanda and Topor-Madry, Roman and Truelsen, Thomas and Tyrovolas, Stefanos and Ukwaja, Kingsley Nnanna and Uthman, Olalekan and Vasankari, Tommi and Vlassov, Vasiliy and Vollset, Stein Emil and Wakayo, Tolassa and Watkins, David and Weintraub, Robert and Werdecker, Andrea and Westerman, Ronny and Wiysonge, Charles Shey and Wolfe, Charles and Workicho, Abdulhalik and Xu, Gelin and Yano, Yuichiro and Yip, Paul and Yonemoto, Naohiro and Younis, Mustafa and Yu, Chuanhua and Vos, Theo and Naghavi, Mohsen and Murray, Christopher},
+	author = {Roth, Gregory A. et al.},
 	month = jul,
 	year = {2017},
 	pages = {1--25}
@@ -138,7 +133,7 @@
 	language = {eng},
 	number = {10},
 	journal = {Circulation},
-	author = {Benjamin, Emelia J. and Blaha, Michael J. and Chiuve, Stephanie E. and Cushman, Mary and Das, Sandeep R. and Deo, Rajat and de Ferranti, Sarah D. and Floyd, James and Fornage, Myriam and Gillespie, Cathleen and Isasi, Carmen R. and Jiménez, Monik C. and Jordan, Lori Chaffin and Judd, Suzanne E. and Lackland, Daniel and Lichtman, Judith H. and Lisabeth, Lynda and Liu, Simin and Longenecker, Chris T. and Mackey, Rachel H. and Matsushita, Kunihiro and Mozaffarian, Dariush and Mussolino, Michael E. and Nasir, Khurram and Neumar, Robert W. and Palaniappan, Latha and Pandey, Dilip K. and Thiagarajan, Ravi R. and Reeves, Mathew J. and Ritchey, Matthew and Rodriguez, Carlos J. and Roth, Gregory A. and Rosamond, Wayne D. and Sasson, Comilla and Towfighi, Amytis and Tsao, Connie W. and Turner, Melanie B. and Virani, Salim S. and Voeks, Jenifer H. and Willey, Joshua Z. and Wilkins, John T. and Wu, Jason Hy and Alger, Heather M. and Wong, Sally S. and Muntner, Paul and {American Heart Association Statistics Committee and Stroke Statistics Subcommittee}},
+	author = {{American Heart Association Statistics Committee and Stroke Statistics Subcommittee}},
 	month = mar,
 	year = {2017},
 	pmid = {28122885},
@@ -165,6 +160,30 @@ FUNDING: Biotronik AG.},
 	month = jan,
 	year = {2016},
 	pmid = {26470647},
-	keywords = {Humans, Male, Middle Aged, Aged, Female, Absorbable Implants, Alloys, Magnesium, Antibiotics, Antineoplastic, Cohort Studies, Coronary Restenosis, Coronary Stenosis, Drug-Eluting Stents, Endosonography, Percutaneous Coronary Intervention, Prospective Studies, Sirolimus, Tissue Scaffolds, Tomography, Optical Coherence, Treatment Outcome},
+	keywords = {Absorbable Implants, Aged, Alloys, Antibiotics, Antineoplastic, Cohort Studies, Coronary Restenosis, Coronary Stenosis, Drug-Eluting Stents, Endosonography, Female, Humans, Magnesium, Male, Middle Aged, Percutaneous Coronary Intervention, Prospective Studies, Sirolimus, Tissue Scaffolds, Tomography, Optical Coherence, Treatment Outcome},
 	pages = {31--39}
+}
+
+@article{bowen_biodegradable_2016,
+	title = {Biodegradable {Metals} for {Cardiovascular} {Stents}: from {Clinical} {Concerns} to {Recent} {Zn}-{Alloys}},
+	volume = {5},
+	issn = {21922640},
+	shorttitle = {Biodegradable {Metals} for {Cardiovascular} {Stents}},
+	doi = {10.1002/adhm.201501019},
+	language = {en},
+	number = {10},
+	urldate = {2018-10-12},
+	journal = {Advanced Healthcare Materials},
+	author = {Bowen, Patrick K. and Shearier, Emily R. and Zhao, Shan and Guillory, Roger J. and Zhao, Feng and Goldman, Jeremy and Drelich, Jaroslaw W.},
+	month = may,
+	year = {2016},
+	pages = {1121--1140},
+}
+
+@book{bonsignore_open_2012,
+	title = {Open {Stent} {Design}: {Design} and analysis of self expanding cardiovascular stents},
+	isbn = {1-4810-8069-5},
+	publisher = {CreateSpace Independent Publishing Platform},
+	author = {Bonsignore, Craig L.},
+	year = {2012}
 }
