--- a/References.bib
+++ b/References.bib
@@ -187,3 +187,34 @@ FUNDING: Biotronik AG.},
 	author = {Bonsignore, Craig L.},
 	year = {2012}
 }
+
+
+@article{hermawan2018updates,
+  title={Updates on the research and development of absorbable metals for biomedical applications},
+  author={Hermawan, Hendra},
+  journal={Progress in Biomaterials},
+  pages={1--18},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{drelich2017long,
+  title={Long-term surveillance of zinc implant in murine artery: Surprisingly steady biocorrosion rate},
+  author={Drelich, Adam J and Zhao, Shan and Guillory II, Roger J and Drelich, Jaroslaw W and Goldman, Jeremy},
+  journal={Acta Biomaterialia},
+  volume={58},
+  pages={539--549},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{bowen2015rates,
+  title={Rates of in vivo (arterial) and in vitro biocorrosion for pure magnesium},
+  author={Bowen, Patrick K and Drelich, Adam and Drelich, Jaroslaw and Goldman, Jeremy},
+  journal={Journal of Biomedical Materials Research Part A},
+  volume={103},
+  number={1},
+  pages={341--349},
+  year={2015},
+  publisher={Wiley Online Library}
+}
