--- a/EuCAP2019_template.tex
+++ b/EuCAP2019_template.tex
@@ -355,7 +355,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Remote Monitoring of Biodegradable Cardiovascular Stents using mm-waves}
+\title{Remote Monitoring of Absorbable Cardiovascular Stents using mm-waves}
 
 
 
@@ -403,7 +403,7 @@ Department of MEEN, Texas A\&M University at Qatar,
 
 \begin{abstract}
 %\boldmath
-In this paper, we present a corrosion monitoring scheme for biodegradable cardiovascular stents composed of magnesium alloys. We show that the structural integrity of such mesh-type tubular stents can be evaluated using millimeter-scale electromagnetic waves. The electromagnetic scattering from the simulation results indicates that the resonant frequency decreases as the structure thickness degrades with time.
+In this paper, we propose a corrosion monitoring scheme for the absorbable cardiovascular stents composed of magnesium alloys. We show that the structural integrity of such mesh-type tubular stents can be evaluated using millimeter-scale electromagnetic waves. The electromagnetic scattering from the simulation results indicates that the resonant frequency decreases as the structure thickness degrades with time.
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
 % This preserves the distinction between vectors and scalars. However,
@@ -433,15 +433,22 @@ In this paper, we present a corrosion monitoring scheme for biodegradable cardio
 % no \IEEEPARstart
 Cardiovascular disease (CVD) is the leading cause of death worldwide, and it accounted for an estimated 30\% of all deaths in the year 2013 globally \cite{benjamin_heart_2017}. Clogging of the heart vessels is the biggest factor responsible for the development of the CVD. These days, it is a common clinical practice to reopen the heart vessels through balloon angioplasty, and place a mesh-type metallic scaffolding tube called a stent to reinforce the vessel walls.  However, due to the long-standing presence of a metallic foreign object in the form of a stent, serious health complications arise chief among which is the reclogging of the vessels in the long term, especially in the vicinity of the stent. From a medical perspective, an ideal stent would be the one that serves its purpose of reopening and stabilizing the heart vessels and then disappear \cite{waksman_biodegradable_2006}.  The biodegradable stents  precisely offer such a possibility where the scaffold structure completely corrode away after performing the reinforcement of the heart vessel walls \cite{hou_review_2016}.
 
-Research into biodegradable polymers and metals has been on-going, but the inherent superior mechanical properties of metals make them more attractive for biodegradable stent application compared to polymers \cite{chen_recent_2014}. Among metals, zinc and magnesium-based alloys have both shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. More importantly, Mg is also vital in maintaining a healthy heart, and given the weight of a typical coronary stent is in the range of \SIrange{3}{5}{\mg}, the release of Mg ions is unlikely to cause any adverse effects.
+Biodegradable polymers and metals is an active research area nowadays. Due to the vastly superior mechanical properties, metals are therefore more suitable for medical implants \cite{chen_recent_2014}. Among metals, iron, zinc and magnesium-based alloys have shown promise for degradable stent applications, but as of today, only Mg-based biodegradable stents have been clinically tested in humans \cite{staiger_magnesium_2006,esmaily_fundamentals_2017}. The mechanical properties of Mg such as elasticity closely resemble the human bone \cite{hermawan2018updates} and with the help of alloying, further attractive characteristics can be achieved. More importantly, Mg can be metabolized by the body and is also vital in maintaining a healthy heart, and given the weight of a typical coronary stent is in the range of \SIrange{3}{5}{\mg}, the release of Mg ions is unlikely to cause any adverse toxic effects.
 
-One of the biggest engineering challenges presented with the use of a biodegradable stent is that its structural integrity must be maintained until the stent completely breaks down and is metabolized in to the bloodstream. To ensure this, the stent and its biodegradation due to corrosion needs to be monitored through non-invasive means. In this paper, we propose an electromagnetic monitoring scheme that monitors the structural integrity of a biodegradable stent using millimeter waves (mm-waves). Compared to the microwave wave imaging, mm-wave provide higher spatial resolution. On the other hand, mm-waves can penetrate deeper into the human tissue compared with the optical frequency counterparts. Using full-wave 3D electromagnetic simulations, we show that the stent corrosion can be determined with the help of the frequency change in the scattering properties.
+One of the biggest engineering challenges presented with the use of an absorbable stent is ensuring its structural integrity until the stent completely breaks down by being metabolized in to the bloodstream. In view of this, it is critical to monitor the stent and its absorption due to corrosion need, preferably through non-invasive means. In this paper, we propose an electromagnetic monitoring scheme that monitors the structural integrity of a biodegradable stent using millimeter waves (mm-waves). Compared to the microwave wave imaging, mm-wave provides higher spatial resolution. On the other hand, mm-waves can penetrate deeper into the human tissue compared with the optical frequency counterparts. Using full-wave 3D electromagnetic simulations, we show that the stent corrosion can be correlated to the frequency shift in the backscattering properties.
 
 \vspace{7pt}
 \section{Methodology}
 %
-To simulate the biodegradation of a cardiovascular stent, we used the \emph{Open stents} \cite{bonsignore_open_2012} models that are customizable due to their inherent parameterization. The stent length was set to \SI{25}{\mm} with the diameter in the expanded form equal to \SI{4}{\mm}, as shown in Fig. \ref{fig:stent}.
+Here we simulate a full-scale model of a magnesium cardiovascular stent and monitor the corrosion using the  was shown in \cite{bowen2015rates} that the corrosion rate $P$, for a wire like structure is independent of length and can be completely described in terms of the radius $r(t)$ of the wire at any given time $t$ by,
 %
+\begin{equation}
+  P = \frac{r_0 - r(t)}{t}
+  \label{eq:corrosion}
+\end{equation}
+%
+where $r_0$ is the initial wire radius. For a magnesium wire, an in-vivo penetration corrosion rate of \SI{500}{\um \per \year} would
+To simulate the scattering properties of an absorbable cardiovascular stent, we used the \emph{Open stents} CAD models that are customizable due to their inherent parameterization \cite{bonsignore_open_2012}. The stent length was set to \SI{25}{\mm} with the diameter in the expanded form equal to \SI{4}{\mm}, as shown in Fig. \ref{fig:stent}. The stent strut thickness was initially set to \SI{170}{\um}.
 \begin{figure}[h!]
 \centering
 \includegraphics[width=2.5in]{Stent.PNG}
@@ -449,60 +456,6 @@ To simulate the biodegradation of a cardiovascular stent, we used the \emph{Open
 \label{fig:stent}
 \end{figure}
 %
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex,
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation Results}
-%\label{fig_sim}
-%\end{figure}
-
-% Note that IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command, the
-% \label for the overall figure must come after \caption.
-% \hfil must be used as a separator to get equal spacing.
-% The subfigure.sty package works much the same way, except \subfigure is
-% used instead of \subfloat.
-%
-%\begin{figure*}[!t]
-%\centerline{\subfloat[Case I]\includegraphics[width=2.5in]{subfigcase1}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{subfigcase2}%
-%\label{fig_second_case}}}
-%\caption{Simulation results}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-
-
-% An example of a floating table. Note that, for IEEE style tables, the
-% \caption command should come BEFORE the table. Table text will default to
-% \footnotesize as IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
 %
 %\begin{table}[!t]
 %% increase table row spacing, adjust to taste
@@ -523,17 +476,9 @@ To simulate the biodegradation of a cardiovascular stent, we used the \emph{Open
 %\end{tabular}
 %\end{table}
 
-
-% Note that IEEE does not put floats in the very first column - or typically
-% anywhere on the first page for that matter. Also, in-text middle ("here")
-% positioning is not used. Most IEEE journals/conferences use top floats
-% exclusively. Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the \fnbelowfloat
-% command of the stfloats package.
-
-
 \vspace{7pt}
 \section{Conclusion}
+%
 For all further questions please read first the WORD template that is also provided on the EuCAP 2019 website, before consulting the local organising committee.
 
 
@@ -545,8 +490,8 @@ For all further questions please read first the WORD template that is also provi
 % use section* for acknowledgement
 \vspace{7pt}
 \section*{Acknowledgment}
-
-This publication was made possible by SIRF grant number SIRF 200041 from the
+%
+This publication was made possible by Sidra Internal Research Fund grant number SIRF 200041 from the
 Sidra Medicine (a member of Qatar Foundation). The statements made herein are solely the responsibility of the authors.
 
 
